[package]
name = "hello-world-discord"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
discord-flows = "0.4"
flowsnet-platform-sdk = "0.1"
tokio_wasi = { version = "1.25.1", features = ["macros", "rt"] }
log = "0.4"
serde_json = "1.0"
anyhow = "1"
rand = "0.8.5"
store-flows = "0.3.1"
serde = "1.0.183"
